<resources>
    <string-array name="dist_array">
        <item>&lt; 200 m</item>
        <item>&lt; 500 m</item>
        <item>&lt; 1 Km</item>
        <item>&lt; 2 Km</item>
        <item>&lt; 3 Km</item>
        <item>&lt; 5 Km</item>
        <item>&lt; 10 Km</item>
    </string-array>
    <string-array name="minnotice_array">
        <item>0 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>45 min</item>
        <item>1 hr</item>
        <item>2 hrs</item>
        <item>3 hrs</item>
        <item>4 hrs</item>
        <item>5 hrs</item>
        <item>12 hrs</item>
        <item>24 hrs</item>
        <item>36 hrs</item>
        <item>48 hrs</item>
    </string-array>
    <string name="title_section1">Buy</string>
    <string name="title_section2">Sell</string>
    <string name="title_section3">Swaps</string>
    <string name="title_section4">Transactions</string>
    <string-array name="dayStrings">
        <item>Mon</item>
        <item>Tue</item>
        <item>Wed</item>
        <item>Thu</item>
        <item>Fri</item>
        <item>Sat</item>
        <item>Sun</item>
    </string-array>
    <string-array name="nav_drawer_items">
        <item>Profile</item>
        <item>Top Cooks</item>
        <item>Chats</item>
        <item>Help</item>
    </string-array>
    <string-array name="scorelabels">
        <item>Troll</item>
        <item>Novice</item>
        <item>Apprentice</item>
        <item>Expert</item>
        <item>Master</item>
        <item>Chef C4</item>
    </string-array>
    <string-array name="languages">
        <item>it</item>
    </string-array>
    <string name="offers_near_you">Offers near you</string>
    <string name="current_offers">Current offers</string>
    <string name="registered_dishes">Registered dishes</string>
    <string name="add_dish">Add a dish to offer!</string>
    <string name="welcome_to_c4">Welcome to Cook4!</string>
    <string name="you_go_buy">I collect</string>
    <string name="they_come_buy">Delivered by cook</string>
    <string name="you_go_sell">I will deliver</string>
    <string name="they_come_sell">Users collect</string>
    <string name="address_hint">Address (default = current location)</string>
    <string name="address_details_hint">Address details (optional)</string>
    <string name="ready_at">Ready at:</string>
    <string name="time_hint">Time</string>
    <string name="min_notice">min notice</string>
    <string name="max_distance">max distance I\'ll walk</string>
    <string name="max_portions">servings</string>
    <string name="one_off">One off</string>
    <string name="periodic">periodic</string>
    <string name="date">Date</string>
    <string name="to_hint">To</string>
    <string name="type_your_msg_hint">Type your message</string>
    <string name="portions">Quantity:</string>
    <string name="buy_button">Buy!</string>
    <string name="swap_button">Swap?</string>
    <string name="accept_button">Accept!</string>
    <string name="refuse_button">Refuse</string>
    <string name="cancel_button">Cancel</string>
    <string name="latest_ratings_received">Latest ratings received</string>
    <string name="dish_name_hint">Dish name</string>
    <string name="pick_tags_hint">Pick tags</string>
    <string name="insert_description_hint">Insert a description</string>
    <string name="dish_pictures">Dish pictures (cover highlighted):</string>
    <string name="save_dish_button">Save</string>
    <string name="to_receive">To receive</string>
    <string name="to_prepare">To prepare</string>
    <string name="conversations">Conversations</string>
    <string name="swaps_to_consider">Swaps to consider</string>
    <string name="proposed_swaps">Proposed swaps</string>
    <string name="user_info_button">User Info</string>
    <string name="modify_name_button">Modify User Name</string>
    <string name="logout_button">Log out</string>
    <string name="general_rating">Reliability</string>
    <string name="general_comments_hint">General comments</string>
    <string name="food_not_received">Food not received</string>
    <string name="food_rating">Food quality</string>
    <string name="food_comments_hint">Food comments</string>
    <string name="vote_button">Vote!</string>
    <string name="login_with_google_button">Log in with Google</string>
    <string name="login_with_fb_button">Log in with Facebook</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="login_button">Log in</string>
    <string name="signup_button">Sign up</string>
    <string name="address_search_hint">Address</string>
    <string name="search_button">Search</string>
    <string name="pay_with_dish">Pay with one of your dishes!</string>
    <string name="valid_until">Valid until:</string>
    <string name="ready_at_hint">Ready at</string>
    <string name="choose_dish">Choose a dish:</string>
    <string name="propose_swap_button">Propose!</string>
    <string name="global_top_cooks">Global Top Cooks</string>
    <string name="latest_ratings_left">Latest ratings left</string>
    <string name="username_hint">User Name</string>
    <string name="repeat_pass_hint">Repeat password</string>
    <string name="search_results">Search results</string>
    <string name="dish_details">Dish details</string>
    <string name="search_criteria">Search criteria</string>
    <string name="title_activity_top_cooks">Top Cooks</string>
    <string name="title_activity_pending_chats">Chats</string>
    <string name="title_activity_profile">Profile</string>
    <string name="pick_dish_swap_hint">Pick a dish to swap</string>
    <string name="make_a_choice">Make a choice!</string>
    <string name="introduce_yourself">Introduce yourself!</string>
    <string name="error_insert_portions">You must insert a quantity</string>
    <string name="error_choose_from_list">You must choose the address from the list</string>
    <string name="no_comments_dish">No comments for this dish</string>
    <string name="tags">Tags</string>
    <string name="description">Description</string>
    <string name="proposed_to">Proposed to</string>
    <string name="proposed_by">Proposed by</string>
    <string name="on">on</string>
    <string name="today">today</string>
    <string name="yesterday">yesterday</string>
    <string name="tomorrow">tomorrow</string>
    <string name="at_hour">at</string>
    <string name="months">months</string>
    <string name="month">month</string>
    <string name="days">days</string>
    <string name="day">day</string>
    <string name="hours">hours</string>
    <string name="hour">hour</string>
    <string name="minutes">minutes</string>
    <string name="minute">minute</string>
    <string name="dish_ready">Dish ready</string>
    <string name="tot_price_due">Total price due</string>
    <string name="to_be_received_at">To be received at</string>
    <string name="to_be_exchanged_with">To be exchanged with</string>
    <string name="at_place">at</string>
    <string name="to_be_picked_at">To be picked at</string>
    <string name="to_be_delivered_at">To be delivered at</string>
    <string name="to_be_picked_by_foodie">To be picked by the foodie at</string>
    <string name="dish_at_distance">Dish at</string>
    <string name="exchange_with">Exchange with</string>
    <string name="to_take_place">to take place</string>
    <string name="to_be_confirmed_before">To be confirmed before</string>
    <string name="buy_with_delivery_summary">You will receive the dish at the selected address and time. For any queries, chat with the cook from the section \'Transactions\'!</string>
    <string name="buy_with_delivery">Buy with delivery</string>
    <string name="swap_with_del_summary">The exchange will take place at the selected address at the given time.</string>
    <string name="swap_with_delivery">Exchange with delivery</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="buy_nodel_summary">You will need to go and pick your dish at the given time. The cook\'s address will be shown in the Pending transactions upon confirmation.</string>
    <string name="buy_nodel">Buy without delivery</string>
    <string name="swap_nodel_summary">The exchange will take place at the cook\'s place at the given time. The address will be shown upon confirmation.</string>
    <string name="swap_nodel">Exchange without delivery</string>
    <string name="confirming_transaction">Confirming transaction</string>
    <string name="error_transaction">Problems in the transaction</string>
    <string name="error_too_far">You are too far to be delivered this dish</string>
    <string name="error_too_many_portions">Error. Probably too much quantity chosen.</string>
    <string name="error_self_transaction">Error. You can\'t buy your own dish.</string>
    <string name="error_no_offer">Error. The offer no longer exists.</string>
    <string name="transaction_confirmed">Transaction confirmed!</string>
    <string name="confirming_swap">Confirming swap</string>
    <string name="swap_confirmed">Swap confirmed, check your pending transactions</string>
    <string name="error_swap">Problems confirming swap</string>
    <string name="portions_mismatch">Quantity mismatch</string>
    <string name="you_are_exchanging">You are exchanging</string>
    <string name="portions_of">portions of</string>
    <string name="while_you_have_only">while you have only</string>
    <string name="available_to_date_proceed">available for this date. Do you still want to proceed?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="wait">Wait</string>
    <string name="removing_swap">Removing swap</string>
    <string name="swap_removed">Swap removed</string>
    <string name="problems_removing_swap">Problems removing swap</string>
    <string name="error_self_swap">You cannot propose a swap to yourself</string>
    <string name="walking_time">walking time</string>
    <string name="type_message_first">Type a message first</string>
    <string name="no_offers_available">No offers available</string>
    <string name="no_votes">No votes</string>
    <string name="NA">N.A.</string>
    <string name="offer_no_longer_available">No longer available</string>
    <string name="problems_downloading_offers">Problems downloading offers</string>
    <string name="now">now</string>
    <string name="from_now">from now</string>
    <string name="every_weekdays">Every</string>
    <string name="from_date">from</string>
    <string name="to_date">to</string>
    <string name="next_offer">Next offer</string>
    <string name="chat_error">Can\'t send the message. The user does not exist or is banned.</string>
    <string name="deleting_dish">Deleting dish</string>
    <string name="dish_deleted">Dish deleted succesfully</string>
    <string name="cant_delete_dish_transactions">Cannot delete dish, there are pending/unvoted transactions related to it</string>
    <string name="problems_deleting_dish">Problems deleting dish</string>
    <string name="deleting_offer">Deleting offer</string>
    <string name="offer_deleted">Offer deleted succesfully</string>
    <string name="problems_deleting_offer">Problems deleting offer</string>
    <string name="make_offer_for">Make your offer for</string>
    <string name="your_offer_for">Your offer for</string>
    <string name="choose_delivery_option">You must choose a delivery option</string>
    <string name="prices_not_complete">Prices are not complete</string>
    <string name="insert_time_availability">You must insert a time of availability</string>
    <string name="genrating_explanation">How was your interaction? What about punctuality, kindness and overall attitude?</string>
    <string name="foodrating_explanation">Simply - how was the food?</string>
    <string name="paypal_button">PayPal account</string>
    <string name="remove_account">Remove account</string>
</resources>