<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/profile_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_app">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:padding="@dimen/content_margin">

            <LinearLayout
                android:id="@+id/llProfile"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:orientation="horizontal">

                <RelativeLayout
                    android:id="@+id/photocontainer"
                    android:layout_width="80dp"
                    android:layout_height="80dp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20dp" />

                    <TextView
                        android:id="@+id/txtEmail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textSize="14dp" />

                    <TextView
                        android:id="@+id/txtPrivilege"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:textColor="@color/DarkGreen"
                        android:textSize="14dp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/btn_user_info"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/user_info_button" />

            <Button
                android:id="@+id/btn_changename"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/modify_name_button" />

            <Button
                android:id="@+id/btn_changedescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/introduce_yourself" />

            <Button
                android:id="@+id/btn_paypal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/paypal_button" />

            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/logout_button" />

            <TextView
                android:id="@+id/txt_remove_account"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="80dp"
                android:gravity="center"
                android:text="@string/remove_account"
                android:textColor="@color/blue" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>