<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_app">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardCornerRadius="@dimen/corner_radius"
                card_view:cardElevation="@dimen/card_elevation"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/header_height">

                        <TextView
                            android:id="@+id/summary"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:paddingLeft="@dimen/content_margin"
                            android:textColor="@color/headers_text"
                            android:textSize="16dp"
                            android:textStyle="bold" />

                        <View
                            android:layout_width="fill_parent"
                            android:layout_height="2dp"
                            android:layout_alignParentBottom="true"
                            android:background="@color/headers_text" />

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:layout_marginTop="15dp"
                        android:orientation="vertical"
                        android:padding="@dimen/content_margin">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/general_rating"
                            android:textColor="@color/headers_text"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="10dp"
                            android:text="@string/genrating_explanation"
                            android:textSize="12sp" />

                        <RatingBar
                            android:id="@+id/genrating"
                            style="android:ratingBarStyle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:isIndicator="false"
                            android:minHeight="57dp"
                            android:numStars="5"
                            android:rating="3"
                            android:stepSize="0.5" />

                        <EditText
                            android:id="@+id/generalcomments"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:ems="10"
                            android:hint="@string/general_comments_hint" />

                        <CheckBox
                            android:id="@+id/checknotreceived"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:text="@string/food_not_received" />

                        <LinearLayout
                            android:id="@+id/foodpanel"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/foodratingtext"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="5dp"
                                android:text="@string/food_rating"
                                android:textColor="@color/headers_text"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="10dp"
                                android:text="@string/foodrating_explanation"
                                android:textSize="12sp" />


                            <RatingBar
                                android:id="@+id/foodrating"
                                style="android:ratingBarStyle"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:isIndicator="false"
                                android:minHeight="57dp"
                                android:numStars="5"
                                android:rating="3"
                                android:stepSize="0.5" />

                            <EditText
                                android:id="@+id/foodcomments"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:ems="10"
                                android:hint="@string/food_comments_hint" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/votebutton"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:text="@string/vote_button" />

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
